# zafar_plates

./: CMakeLists.txt  plates-zafar.cpp  videoplayer.cpp
